@@ -264,8 +264,8 @@ fi
 # Licensing
 
 echo "You are about to install the uClibc++ library into the NuttX source"
-echo "tree.  NuttX is licensed under a modified BSD License; uClibc is"
-echo "licensed under the GNU LGPL Version 3 license.  When you install"
+echo "tree.  NuttX is licensed under the permissive, modified BSD License; uClibc"
+echo "is licensed under the GNU LGPL Version 3 license.  When you install"
 echo "uClibc++ into the NuttX source tree, you must then comply with uClibc's"
 echo "stricter GNU LGPL Version 3 license."
 echo ""
